syntax = "proto3";
import "Protos/Common.proto";

option csharp_namespace = "gRPC.Common.Protos";

package ru.bit76.energymng.server.grpc.serviceconnector;

message CentralServerRequest {
	string request_guid = 1;
	common.Date start_date = 2;
	repeated common.DateTimeValue date_time_value = 3;
}

message ClientServerRequest {
	string request_guid = 1;
	repeated common.DateTimeValue date_time_value = 2;
}

service CentralServiceGrpc {
  rpc PredictConsumptionOnServer (CentralServerRequest) returns (common.BaseResponse); // ��� ��������� ������ �� ����������� �������
}

service ChildServiceGrpc {
	rpc SaveConsumptionResult (ClientServerRequest) returns (common.BaseResponse); // ��� ��������� � ������� ��������
}